# zindi

./: .gitignore  CUDA_SETUP.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  cpu_deployment_config.json  create_optimal_dataset.py  debug_training_evaluation.py  evaluate_latest.py  evaluate_speed_optimized.py  install_package.sh  instructions.md  optimize_model.py  project_structure.md  pyproject.toml  quick_fix.py  requirements.txt  run_all.py  run_mac.sh  run_training.sh  setup.py  setup_and_run.sh  setup_python_path.py  test_import.py  train.py  train_fantastic.py  train_optimized.py
analysis_results/: data_analysis_results.json
data/processed/: preprocessing_stats.json  test_processed.csv  test_processed.json  train_optimal.json  train_processed.csv  train_processed.json  val_processed.csv  val_processed.json
data/raw/: SampleSubmission.csv
model_evaluation_results/: model_evaluation_report.txt  model_evaluation_results.json
scripts/: analyze_data.py  analyze_data_minimal.py  check_device.py  demo.py  evaluate_models.py  inference.py  monitor_live.py  monitor_training.py  preprocess_data.py  quick_test.py  train_model.py
src/: __init__.py
src/data/: __init__.py  loader.py  preprocessor.py
src/evaluation/: __init__.py  metrics.py
src/models/: __init__.py  clinical_t5.py
src/training/: __init__.py  trainer.py
src/utils/: __init__.py  config.py  device_utils.py
